--- a/colearn-kshare-backend/src/main/resources/application.yaml
+++ b/colearn-kshare-backend/src/main/resources/application.yaml
@@ -8,3 +8,4 @@ spring.jpa.properties.hibernate.use_sql_comments: true
 spring.jpa.properties.hibernate.format_sql: true
 spring.jpa.properties.hibernate.type: trace
 
+spring.mvc.dispatch-options-request: true
