--- a/colearn-kshare-backend/pom.xml
+++ b/colearn-kshare-backend/pom.xml
@@ -122,6 +122,13 @@
             <version>5.4.0</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>io.github.microutils</groupId>
+            <artifactId>kotlin-logging</artifactId>
+            <version>1.6.24</version>
+        </dependency>
+
     </dependencies>
 
     <build>
