--- a/colearn-kshare-backend/pom.xml
+++ b/colearn-kshare-backend/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.3.RELEASE</version>
+        <version>2.1.4.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>dev.colearn</groupId>
@@ -51,11 +51,20 @@
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
 
+        <!-- Produces java.lang.ClassNotFoundException: org.springframework.hateoas.mvc.UriComponentsContributor -->
 <!--        <dependency>-->
 <!--            <groupId>org.springframework.hateoas</groupId>-->
 <!--            <artifactId>spring-hateoas</artifactId>-->
 <!--            <version>1.0.0.M1</version>-->
 <!--        </dependency>-->
+
+        <!-- https://mvnrepository.com/artifact/org.springframework.hateoas/spring-hateoas -->
+        <dependency>
+            <groupId>org.springframework.hateoas</groupId>
+            <artifactId>spring-hateoas</artifactId>
+            <version>0.25.1.RELEASE</version>
+        </dependency>
+
 
         <dependency>
             <groupId>com.fasterxml.jackson.module</groupId>
